docs: clean code